--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-      - run: npm i
+      - run: npm install -g bats
       - run: sed -i s/KV_NAME/${{ secrets.KV_NAME }}/g wrangler.toml
       - name: Build & Deploy Worker
         uses: cloudflare/wrangler-action@v3
